minor z-index fix; moved plugins css into a folder

--- a/src/sass/_columns.scss
+++ b/src/sass/_columns.scss
@@ -10,7 +10,7 @@
     background-color: $timeslots-background-color;
     display: inline-block;
     overflow: hidden;
-    z-index: 1030;
+    z-index: 1040;
 
     font-size: $text-size;
     line-height: $line-height;
